SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
============================================================================

Version 6.2 - not yet released
* devices
  - added task declaration support for the IMI ERIXX logger
  - improved support for the Digifly Leonardo
  - auto-detect serial ports on Windows CE
  - serial port support on UNIX

Version 6.1.2 - not yet released
* calculations
  - reduce memory usage further
  - fix boundary routine of the key hole zone
* user interface
  - change low battery thresholds
  - manual and translation updates
  - fix UTC offset setting
  - fix overlapped InfoBox text
* map
  - fixed coast line display (areas below zero no longer flooded)

Version 6.1.1 - 2011/06/01
* calculations
  - fix arrival heights which are below the safety height
  - reduce memory usage
  - fixed several bugs in the teamcode calculation and display
* user interface
  - new option for large glider symbol
  - re-enable the team bearing diff InfoBox
  - fix crash in the waypoint editor
* Windows
  - workaround for PPC2000 bug that caused lockups
* Android
  - fix crash bug after orientation change and resume
  - support non-standard SD card mount points
* Altair
  - fix UI lag
  - fix default task on startup
  - optionally load XCSoarData from USB drive
  - swap "ACK Warn" / "ACK Space" hot keys
  - disallow the on-screen keyboard
  - fix clipped cursor in text entry dialog
  - fix default font for "important topology"

Version 6.1 - 2011/05/19
* devices
  - CAI302: read QNH setting
  - Vega: send configured QNH to Vega
  - allow disabling a device explicitly
  - listen for NMEA on TCP port
  - automatically restart FLARM after declaration
  - Stealth mode detection of other FLARM targets
* user interface
  - "pan to" button in waypoint dialog
  - waypoint selection screen shows last used waypoints if no filter is set
  - change the info box geometry without restarting XCSoar
  - change the display orientation without restarting XCSoar