@@ -52,6 +52,8 @@ public:
     SCREEN_ORIENTATION_BEHIND = 3,
     SCREEN_ORIENTATION_SENSOR = 4,
     SCREEN_ORIENTATION_NOSENSOR = 5,
+    SCREEN_ORIENTATION_REVERSE_LANDSCAPE = 8,
+    SCREEN_ORIENTATION_REVERSE_PORTRAIT = 9,
   };
 
   NativeView(JNIEnv *_env, jobject _obj,
