@@ -53,6 +53,8 @@ namespace Display {
     ORIENTATION_DEFAULT,
     ORIENTATION_PORTRAIT,
     ORIENTATION_LANDSCAPE,
+    ORIENTATION_REVERSE_PORTRAIT,
+    ORIENTATION_REVERSE_LANDSCAPE,
   };
 
   void RotateInitialize();
